--- a/carol-portfolio-main/index.html
+++ b/carol-portfolio-main/index.html
@@ -231,7 +231,7 @@
       <a href="contact.html" class="alt">Get In Touch</a>
     </div>
 
-    <div class="emoji-row">Developed By Fadhili </div>
+    <div class="emoji-row">Developed By Carol  </div>
   </main>
 
   <footer>
